--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3765,3 +3765,17 @@ input, select, textarea {
 			}
 
 		}
+
+/* Particles css */
+
+#particles-js{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -100;
+  background-color: #000000;
+  background-image: url('');
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
