--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2841,14 +2841,16 @@ input, select, textarea {
 	}
 
 		.features.outline li {
-			border: 2px solid rgb(0, 202, 158);
+			background-color: #dbdbdb;
+			color: #000000;
+			border: 3px solid rgb(0, 114, 89);
 			border-radius: 20px;
 		}
 
 		.features li {
 			width: calc(33.3333333333% - 2em);
 			margin-left: 2em;
-			margin-top: 3em;
+			margin-top: 1em;
 			padding: 0;
 		}
 
@@ -3041,6 +3043,20 @@ input, select, textarea {
 				display: block;
 				border-radius: 100%;
 				width: 16em;
+			}
+
+		.spotlight .image-small {
+			float: left;
+			margin-right: 2em;
+			padding-top: 0em;
+			padding-bottom: 2em;
+		}
+	
+			.spotlight .image-small img {
+				display: block;
+				border-radius: 20%;
+				width: 8em;
+				height: 8em;
 			}
 
 		@media screen and (max-width: 980px) {
