--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2816,11 +2816,9 @@ input, select, textarea {
 	}
 
 		.features.outline li {
-			width: calc(25%);
-			margin-right: 1em;
-			margin-left: 1em;
+			width: calc(33.3333333333% - 2em);
 			margin-top: 0.5em;
-			padding: 0;
+			padding: 1;
 			background-color: #f8f8f8;
 			color: #000000;
 			border: 3px solid rgba(36, 143, 120, 0.644);
@@ -3044,11 +3042,11 @@ input, select, textarea {
 
 		.spotlight .image-small {
 			float: left;
-			margin-right: 3em;
+			margin-right: 2em;
 			padding-top: 0em;
-			margin-bottom: 3em;
+			margin-bottom: 2em;
 			border-radius: 100%;
-			border: solid 10px;
+			border: solid 6px;
 		}
 	
 			.spotlight .image-small img {
@@ -3152,6 +3150,8 @@ input, select, textarea {
 				opacity: 1;
 			}
 
+			/* logo class, only used in the big logo at the beginning of the page.
+			A css animation makes the logo blink. */
 			#header.alt .logo {
 				-moz-transition: opacity 1.25s ease, -moz-transform 0.5s ease;
 				-webkit-transition: opacity 1.25s ease, -webkit-transform 0.5s ease;
@@ -3165,10 +3165,27 @@ input, select, textarea {
 				margin: 0 0 1.5em 0;
 			}
 
+			@keyframes blink-float { /* simple animation. It doesn't need the forward-backward execution */
+				0%   {opacity: 1; bottom: 0em}
+				50%  {opacity: 0.5; bottom: 1em}
+				100% {opacity: 1; bottom: 0em}
+			  }
+			
+			@keyframes blink { /* simple animation. It doesn't need the forward-backward execution */
+				0%   {opacity: 1}
+				50%  {opacity: 0.5}
+				100% {opacity: 1}
+			  }
+
 				#header.alt .logo img {
+					position: relative;
 					display: block;
 					margin: 0 auto;
 					max-width: 75%;
+					animation-name: blink-float; /* delete the following to eliminate the animation */
+					animation-duration: 5s;
+					animation-iteration-count: infinite;
+					animation-timing-function: ease-in-out;
 				}
 
 		@media screen and (max-width: 1280px) {
@@ -3381,7 +3398,7 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		background-color: rgba(255, 255, 255, 0.9);		
+		background-color: rgba(255, 255, 255, 0.95);		
 		color: #636363;
 		border-radius: 2.25em;
 	}
