--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,10 +100,6 @@ input, select, textarea {
 
 	body {
 		background-color: #000000;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #000000 15%, #000000 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #000000 15%, #000000 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #000000 15%, #000000 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #000000 15%, #000000 85%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -3853,14 +3849,14 @@ input, select, textarea {
 
 /* Particles css */
 
-#particles-js{
+#particles-js {
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: -100;
-  background-color: #000000;
-  background-image: url('');
+  background-color: #000000; /* Background color */
+  background-image: url(''); /* Background image, if needed */
   background-size: cover;
   background-position: 50% 50%;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; /* Useful when using a texture */
 }
